[package]
name = "mutcursor"
version = "0.3.0"
edition = "2021"
authors = ["Luke Peterson <luke@infoplatter.com>"]
license = "MIT OR Apache-2.0"
description = "Safely stores mutable references to parent nodes, for backtracking during traversal of tree & graph structures"
repository = "https://github.com/luketpeterson/mutcursor/"
readme = "README.md"
keywords = ["traversal", "tree", "backtacking", "stack", "cursor"]
categories = ["no-std", "algorithms", "data-structures", "rust-patterns"]

[dependencies]

[features]
default = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
